5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1674_1105.log
== TEST (2019-04-25 12:01:49) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa: "
if(x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta")
	print("Brasao invalido")
elif(x==lobo):
	print(y,"Stark")
elif(x==leao):
	print(y,"Lannister")
elif(x==veado):
	print(y,"Baratheon")
elif(x==dragao):
	print(y,"Targaryen")
elif(x==rosa):
	print(y,"Tyrell")
elif(x==sol):
	print(y,"Martell")
elif(x==lula):
	print(y,"Greyjoy")
elif(x==esfolado):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
-- ERROR:
File "XXXX", line 4
    if(x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta")
                                                                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:06:05) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

elif(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,""Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.140217
-- ERROR:
  File "/home/codebench/codes/1674/1105/main.py", line 5
    elif(x=="lobo"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:06:09) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

elif(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,""Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    elif(x=="lobo"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:06:47) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,""Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.194275
-- ERROR:
  File "/home/codebench/codes/1674/1105/main.py", line 14
    print(y,""Tyrell")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:06:52) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,""Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 14
    print(y,""Tyrell")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:07:17) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,"Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.192543
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:07:20) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,"Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x==turta):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:07:58) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,"Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x=="turta"):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:08:17) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,"Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x=="turta"):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.240605
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:21:25) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,"Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x=="turta"):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:21:53) 
-- CODE:
x=input("descricao do brasao: ")
print("Entrada: ",x)
y="Casa:"

if(x=="lobo"):
	print(y,"Stark")
elif(x=="leao"):
	print(y,"Lannister")
elif(x=="veado"):
	print(y,"Baratheon")
elif(x=="dragao"):
	print(y,"Targaryen")
elif(x=="rosa"):
	print(y,"Tyrell")
elif(x=="sol"):
	print(y,"Martell")
elif(x=="lula"):
	print(y,"Greyjoy")
elif(x=="esfolado"):
	print(y,"Bolton")
elif(x=="turta"):
	print(y,"Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
